--- a/lab1/lab1_alu/my_alu_summary.html
+++ b/lab1/lab1_alu/my_alu_summary.html
@@ -2,12 +2,12 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>my_alu Project Status (04/17/2015 - 10:23:25)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>my_alu Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab1_alu.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>2 Errors</A></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.5</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/*.xmsgs?&DataKey=Warning'>68 Warnings (68 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/*.xmsgs?&DataKey=Warning'>2 Warnings (2 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -57,30 +57,20 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Device Utilization Summary (estimated values)</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary(estimatedvalues)"><B>[-]</B></a></TD></TR>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>126800</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
-</TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>82</TD>
+<TD ALIGN=RIGHT>107</TD>
 <TD ALIGN=RIGHT>63400</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>82</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>39%</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>107</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
-<TD ALIGN=RIGHT>100</TD>
+<TD ALIGN=RIGHT>102</TD>
 <TD ALIGN=RIGHT>210</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>47%</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFG/BUFGCTRL/BUFHCEs</TD>
-<TD ALIGN=RIGHT>2</TD>
-<TD ALIGN=RIGHT>128</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>1%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>48%</TD>
 </TR>
 </TABLE>
 
@@ -94,7 +84,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\my_alu.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Apr 17 10:23:23 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/xst.xmsgs?&DataKey=Warning'>68 Warnings (68 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/xst.xmsgs?&DataKey=Info'>1 Info (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\my_alu.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Apr 23 16:43:18 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/xst.xmsgs?&DataKey=Warning'>2 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/xst.xmsgs?&DataKey=Info'>2 Infos (2 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -108,5 +98,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/17/2015 - 10:25:04</center>
+<br><center><b>Date Generated:</b> 04/23/2015 - 17:18:40</center>
 </BODY></HTML>
