--- a/lab1/lab1_alu/my_alu_summary.html
+++ b/lab1/lab1_alu/my_alu_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>my_alu Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>my_alu Project Status (04/24/2015 - 09:31:42)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab1_alu.xise</TD>
@@ -58,13 +58,13 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>18</TD>
+<TD ALIGN=RIGHT>19</TD>
 <TD ALIGN=RIGHT>63400</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of fully used LUT-FF pairs</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>18</TD>
+<TD ALIGN=RIGHT>19</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
@@ -84,7 +84,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\my_alu.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Apr 24 00:45:13 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/xst.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/xst.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\my_alu.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Apr 24 09:31:39 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/xst.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/xst.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\my_alu.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>Thu Apr 23 19:00:15 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\my_alu_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>Thu Apr 23 19:02:55 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/map.xmsgs?&DataKey=Warning'>20 Warnings (20 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/map.xmsgs?&DataKey=Info'>5 Infos (5 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\my_alu.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Thu Apr 23 19:03:49 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (2 new)</A></TD></TR>
@@ -95,9 +95,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Apr 24 00:58:21 2015</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab1/lab1_alu\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Apr 24 09:36:43 2015</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/24/2015 - 07:52:46</center>
+<br><center><b>Date Generated:</b> 04/24/2015 - 09:46:31</center>
 </BODY></HTML>
